matomo-analytics/deployment.yaml
# Fetched from https://raw.githubusercontent.com/crazy-max/docker-matomo/3.13.1-RC6/examples/kubernetes/03-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-deployment
  namespace: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      name: matomo
      labels:
        app: matomo
    spec:
      containers:
        # In production you should set a specific tag
        - image: crazymax/matomo:latest
          imagePullPolicy: Always
          name: matomo
          ports:
            - containerPort: 8000
              name: web
          volumeMounts:
            - name: matomo-data
              mountPath: /data
        - image: crazymax/matomo:latest
          imagePullPolicy: Always
          name: matomo-cron
          volumeMounts:
            - name: matomo-data
              mountPath: /data
      volumes:
        - name: matomo-data
          persistentVolumeClaim:
            claimName: matomo-data-pvc
