matomo-analytics/ingress.yaml
# Fetched from https://raw.githubusercontent.com/crazy-max/docker-matomo/3.13.1-RC6/examples/kubernetes/05-ingress.yaml
# Modified for trutoo

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matomo-ingress
  namespace: matomo
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - analytics.trutoo.com
      secretName: trutoo-tls
  rules:
    - host: analytics.trutoo.com
      http:
        paths:
          - backend:
              serviceName: matomo
              servicePort: http
